app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
/* 
@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
} */

.li-checkmark {
  list-style-image: url("../public/images/green-checkmark.svg");
}

.li-exclamation-mark {
  list-style-image: url("../public/images/exclamation-mark.svg");
}

.li-checkmark-dark-green {
  list-style-image: url("../public/images/dark-green-checkmark.svg");
}

.li-checkmark-light-green {
  list-style-image: url("../public/images/light-green-checkmark.svg");
}

@layer base {
  :root {
    --background: 89 37% 15%;
    --foreground: 0 0% 100%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 89 37% 15%;
    --primary-foreground: 0 0% 100%;
    --secondary: 77, 10%, 51%;
    --secondary-foreground: 273 100% 4%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 21 91% 41%;
    --accent-foreground: 43 78% 98%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 89 37% 15%;
    --radius: 1rem;
    --platinum: 96 7% 86%;
    --our-programs-border: 73 9% 51%;
    --our-programs-border-2: 77 27% 65%;
    --our-programs-border-3: 84 7% 86%;
  }

  .three-color-border {
    @screen 2xl {
      box-shadow:
        -70px 0 0 0 hsl(73, 9%, 51%),
        -140px 0 0 0 hsl(77, 27%, 65%),
        -210px 0 0 0 hsl(var(--our-programs-border-3));
    }
  }

  .two-color-border {
    @screen 2xl {
      box-shadow:
        -140px 0 0 0 hsl(77, 27%, 65%),
        -210px 0 0 0 hsl(var(--our-programs-border-3));
    }
  }

  .single-color-border {
    @screen 2xl {
      box-shadow: -210px 0 0 0 hsl(var(--our-programs-border-3));
    }
  }
}

@layer base {
  * {
    @apply border-border;
  }
  html {
    @apply font-poppins;
  }

  body {
    @apply bg-background text-foreground;
  }
}

mux-player {
  width: 100%;
  height: 100%;
  position: absolute;
  inset: 0;
  --controls: none;
  --media-object-fit: cover;
  --media-object-position: center;
  --loading-indicator: none;
}

